# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my_package"
version = "0.1.0"
description = "Python template"
readme = "README.md"
authors = ["Filippo Brizzi <filippobrizzi@email.com>"]
license = "MIT"
repository = "https://github.com/filippobrizzi/python-template"

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"example" = "my_package.example.main:main"

[tool.poetry.dependencies]
# Mandatory dependencies
python = ">=3.12"

click_pathlib = "*"
numpy = "*"
pathlib = "*"
matplotlib = "*"
pandas = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = {version = "*", allow-prereleases = true}
darglint = "*"
isort = {extras = ["colors"], version = "*"}
mypy = "*"
mypy-extensions = "*"
pre-commit = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pyupgrade = "*"
safety = "*"
coverage = "*"
coverage-badge = "*"
pytest-html = "*"
pytest-cov = "*"
pyright = "*"

[tool.black]
# https://github.com/psf/black
target-version = ["py312"]
line-length = 100
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 312
line_length = 100

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.pyright]
# https://github.com/Microsoft/pyright/blob/main/docs/configuration.md#sample-config-file
include = ["my_package"]
exclude = ["**/__pycache__"]
# defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingParameterType = true
reportMissingTypeArgument = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.12
pretty = true
show_traceback = true
color_output = true
explicit_package_bases = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

# [tool.coverage.run]
# source = ["tests"]

# [coverage.paths]
# source = "example"

# [coverage.run]
# branch = true

# [coverage.report]
# fail_under = 10
# show_missing = true
